添加hystrix依赖，虽然feign包含hystrix但是缺失对hystrix.stream的监控流依赖，所以得引入依赖，并在启动类添加注解@EnableCircuitBreaker

--- a/microserviceconsumermoviefeignhystrixfallback/pom.xml
+++ b/microserviceconsumermoviefeignhystrixfallback/pom.xml
@@ -30,6 +30,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
         </dependency>
+<!--    引入hystrix依赖是为了可以使用hystrix.stream监控hystrix，虽然feign依赖包含hystrix依赖，但在依赖树中缺失了监控的依赖，所以需要添加该依赖   -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
@@ -38,6 +43,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+
     </dependencies>
 
     <!-- 引入springcloud的依赖 -->
