--- a/mircroservicegatewayzuul/src/main/resources/application.yml
+++ b/mircroservicegatewayzuul/src/main/resources/application.yml
@@ -10,3 +10,8 @@ eureka:
 management:
   security:
     enabled: false
+
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 60000
+ribbon:
+  ConnectTimeout: 3000
+  ReadTimeout: 60000
