--- a/mircroservicegatewayzuulfallback/src/main/resources/application.yml
+++ b/mircroservicegatewayzuulfallback/src/main/resources/application.yml
@@ -15,3 +15,8 @@ hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 60000
 ribbon:
   ConnectTimeout: 3000
   ReadTimeout: 60000
+
+zuul:
+  ribbon:
+    eager-load:
+      enabled: true
